--- a/count/index.html
+++ b/count/index.html
@@ -18,6 +18,8 @@
 
     #output>:nth-child(odd) {
       text-align: end;
+      word-break: break-all;
+      padding-right: 0.5rem;
     }
   </style>
 </head>
