--- a/count/index.html
+++ b/count/index.html
@@ -18,6 +18,7 @@
 
     #output>:nth-child(odd) {
       text-align: end;
+      white-space: pre-wrap;
       word-break: break-all;
       padding-right: 0.5rem;
     }
